test/parsing/errors/cannotAttachPragmas.chpl
pragma "no doc"
writeln("test");
